--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "backend": "nodemon server.js"
   },
   "license": "MIT",
   "dependencies": {
